--- a/test.html
+++ b/test.html
@@ -7,18 +7,18 @@
 	</head>
 	<body>
 		<h2>Picture</h2>
-		<ul>
+		<ul id="showPic">
 			<li>
-				<a href="Picture/彩虹.jpg" title="彩虹" class="newPic">彩虹</a>
+				<a href="Picture/彩虹.jpg" title="彩虹">彩虹</a>
 			</li>
 			<li>
-				<a href="Picture/湖水.jpg" title="湖水" class="newPic">湖水</a>
+				<a href="Picture/湖水.jpg" title="湖水">湖水</a>
 			</li>
 			<li>
-				<a href="Picture/梅花.jpg" title="梅花" class="newPic">梅花</a>
+				<a href="Picture/梅花.jpg" title="梅花">梅花</a>
 			</li>
 			<li>
-				<a href="Picture/图书.jpg" title="图书" class="newPic">图书</a>
+				<a href="Picture/图书.jpg" title="图书">图书</a>
 			</li>
 		</ul>
 		<img id="bnk" width="640" height="480" alt="show pic" />
