move element for js to jsfile

--- a/picShow.html
+++ b/picShow.html
@@ -21,8 +21,14 @@
 				<a href="Picture/图书.jpg" title="图书">图书</a>
 			</li>
 		</ul>
+		<!--
+			* 在网页中插入图片
+			* TODOs:
+			* 删除<img>和<strong>标签
+			* 从js中添加该标签
 		<img id="bnk" width="640" height="480" alt="show pic" />
 		<strong id="picTitle"></strong>
+		-->
 		<script defer src="script/script.js"></script>
 	</body>
 </html>
