--- a/picShow.html
+++ b/picShow.html
@@ -9,26 +9,18 @@
 		<h2>Picture</h2>
 		<ul id="showPic">
 			<li>
-				<a href="Picture/彩虹.jpg" title="彩虹">彩虹</a>
+				<a href="Picture/彩虹.jpg" title="Rainbow">Rainbow</a>
 			</li>
 			<li>
-				<a href="Picture/湖水.jpg" title="湖水">湖水</a>
+				<a href="Picture/湖水.jpg" title="Lake">Lake</a>
 			</li>
 			<li>
-				<a href="Picture/梅花.jpg" title="梅花">梅花</a>
+				<a href="Picture/梅花.jpg" title="Plum">Plum</a>
 			</li>
 			<li>
-				<a href="Picture/图书.jpg" title="图书">图书</a>
+				<a href="Picture/图书.jpg" title="Book">Book</a>
 			</li>
 		</ul>
-		<!--
-			* 在网页中插入图片
-			* TODOs:
-			* 删除<img>和<strong>标签
-			* 从js中添加该标签
-		<img id="bnk" width="640" height="480" alt="show pic" />
-		<strong id="picTitle"></strong>
-		-->
 		<script defer src="script/script.js"></script>
 	</body>
 </html>
